[gd_scene load_steps=23 format=2]

[ext_resource path="res://content/drop/seed/mineraltreesamen-Sheet.png" type="Texture" id=1]
[ext_resource path="res://content/sounds/Events/EggPlant/Spring_08.wav" type="AudioStream" id=2]
[ext_resource path="res://content/drop/seed/focus2.png" type="Texture" id=3]
[ext_resource path="res://content/drop/seed/carry2.png" type="Texture" id=4]
[ext_resource path="res://content/drop/seed/seedroots-Sheet.png" type="Texture" id=5]
[ext_resource path="res://content/shared/HighlightShader.material" type="Material" id=6]
[ext_resource path="res://content/sounds/Events/EggPlant/EggPlant.wav" type="AudioStream" id=7]
[ext_resource path="res://systems/audio/Sound.tscn" type="PackedScene" id=8]
[ext_resource path="res://content/drop/seed/Seed.gd" type="Script" id=10]

[sub_resource type="PhysicsMaterial" id=6]
resource_local_to_scene = true
friction = 0.6
bounce = 0.25

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 28, 15 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 5 )
region = Rect2( 28, 0, 28, 15 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 5 )
region = Rect2( 56, 0, 28, 15 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 5 )
region = Rect2( 84, 0, 28, 15 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 5 )
region = Rect2( 112, 0, 28, 15 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 5 )
region = Rect2( 140, 0, 28, 15 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 5 )
region = Rect2( 168, 0, 28, 15 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 5 )
region = Rect2( 196, 0, 28, 15 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 5 )
region = Rect2( 224, 0, 28, 15 )

[sub_resource type="SpriteFrames" id=36]
animations = [ {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ) ],
"loop": false,
"name": "rooting",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=25]
radius = 3.16228

[sub_resource type="CircleShape2D" id=26]
radius = 2.0

[node name="Seed" type="RigidBody2D" groups=["saveable"]]
z_index = 22
collision_layer = 554
collision_mask = 2
physics_material_override = SubResource( 6 )
contacts_reported = 1
contact_monitor = true
can_sleep = false
script = ExtResource( 10 )
carryableType = "gadget"
type = "rest"

[node name="Sprite" type="Sprite" parent="." groups=["unstyled"]]
light_mask = 0
position = Vector2( 0, 6 )
texture = ExtResource( 1 )
hframes = 9

[node name="Roots" type="AnimatedSprite" parent="." groups=["unstyled"]]
frames = SubResource( 36 )
animation = "rooting"
frame = 5
offset = Vector2( 0, 6 )

[node name="CarrySprite" type="Sprite" parent="."]
visible = false
position = Vector2( -2, 2 )
texture = ExtResource( 4 )

[node name="FocusSprite" type="Sprite" parent="."]
visible = false
material = ExtResource( 6 )
position = Vector2( -2, 2 )
z_index = 30
texture = ExtResource( 3 )

[node name="Tween" type="Tween" parent="."]

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
visible = false
position = Vector2( -2, 2 )
scale = Vector2( 0.5, 0.5 )
freeze_bodies = false

[node name="BumpSound" parent="." instance=ExtResource( 8 )]
stream = ExtResource( 2 )
volume_db = -3.0
pitch_scale = 1.04
bus = "Mine"
randomPitch = 0.19

[node name="CollisionShape1" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -1, 1 )
shape = SubResource( 25 )

[node name="CollisionShape2" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -4, 4 )
shape = SubResource( 26 )

[node name="TreePlantSound" parent="." instance=ExtResource( 8 )]
volume_db = -0.874
pitch_scale = 1.34
bus = "Mine"
maxAudibleDistance = 120.0
minAudibleDistance = 24.0
streams = [ ExtResource( 7 ) ]

[connection signal="body_entered" from="." to="." method="_on_Seed_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Seed_body_exited"]
